--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <p> I love working with Jessica! </p
+    <p> She is awesome! </p
     <script src="script.js"></script>
   </body>
 </html>
